# NeuralNetExperiment

./: Algorithm.cpp  Algorithm.h  CMakeLists.txt  DataGenerator.cpp  DataGenerator.h  Experiment.cpp  Experiment.h  MLP_ITerror.txt  MLP_weights.txt  MultilayerNN.cpp  MultilayerNN.h  RBFDataPoint.cpp  RBFDataPoint.h  RBFNN.cpp  RBFNN.h  data.txt  data2input.txt  data2input_csv.txt  data3input.txt  data3input_csv.txt  data4input.txt  data4input_csv.txt  data5input.txt  data5input_csv.txt  data6input.txt  data6input_csv.txt  main.cpp  nnOutput.txt  weights.txt
nbproject/: Makefile-Debug.mk  Makefile-Release.mk  Makefile-impl.mk  Makefile-variables.mk  Package-Debug.bash  Package-Release.bash  configurations.xml  project.xml
nbproject/private/: private.xml
